# serializer version: 1
# name: test_entities[switch.lg_ac_auto_clean-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.lg_ac_auto_clean',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto clean',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto clean',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_clean',
    'unique_id': '01JTEST0000000000000000000_auto_clean',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.lg_ac_auto_clean-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LG AC Auto clean',
    }),
    'context': <ANY>,
    'entity_id': 'switch.lg_ac_auto_clean',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.lg_ac_ion_generator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.lg_ac_ion_generator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ion generator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ion generator',
    'platform': 'lg_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ion_generator',
    'unique_id': '01JTEST0000000000000000000_ion_generator',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.lg_ac_ion_generator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LG AC Ion generator',
    }),
    'context': <ANY>,
    'entity_id': 'switch.lg_ac_ion_generator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
